font size error on mobile fixed

--- a/client/src/pages/experience/Experience.css
+++ b/client/src/pages/experience/Experience.css
@@ -39,14 +39,14 @@
 }
 
 .experience-heading-sub-text {
-  font-size: 3em;
+  font-size: 32px;
   font-family: "Montserrat", sans-serif;
   text-align: center;
   margin-bottom: 10px;
 }
 
 .experience-header-detail-text {
-  font-size: 16px;
+  font-size: 22px;
   line-height: 1.5;
   margin-top: 0px;
   margin-left: 20px;
